0.9.0/_sources/generated/statsmodels.stats.contingency_tables.Table2x2.rst.txt
statsmodels.stats.contingency_tables.Table2x2
=============================================

.. currentmodule:: statsmodels.stats.contingency_tables

.. autoclass:: Table2x2

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~Table2x2.chi2_contribs
    
    
      ~Table2x2.cumulative_log_oddsratios
    
    
      ~Table2x2.cumulative_oddsratios
    
    
      ~Table2x2.fittedvalues
    
    
      ~Table2x2.from_data
    
    
      ~Table2x2.homogeneity
    
    
      ~Table2x2.independence_probabilities
    
    
      ~Table2x2.local_log_oddsratios
    
    
      ~Table2x2.local_oddsratios
    
    
      ~Table2x2.log_oddsratio
    
    
      ~Table2x2.log_oddsratio_confint
    
    
      ~Table2x2.log_oddsratio_pvalue
    
    
      ~Table2x2.log_oddsratio_se
    
    
      ~Table2x2.log_riskratio
    
    
      ~Table2x2.log_riskratio_confint
    
    
      ~Table2x2.log_riskratio_pvalue
    
    
      ~Table2x2.log_riskratio_se
    
    
      ~Table2x2.marginal_probabilities
    
    
      ~Table2x2.oddsratio
    
    
      ~Table2x2.oddsratio_confint
    
    
      ~Table2x2.oddsratio_pvalue
    
    
      ~Table2x2.resid_pearson
    
    
      ~Table2x2.riskratio
    
    
      ~Table2x2.riskratio_confint
    
    
      ~Table2x2.riskratio_pvalue
    
    
      ~Table2x2.standardized_resids
    
    
      ~Table2x2.summary
    
    
      ~Table2x2.symmetry
    
    
      ~Table2x2.test_nominal_association
    
    
      ~Table2x2.test_ordinal_association
    
   
   

   
   
   